<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aylarbackgrount"
    android:orientation="vertical"
    tools:context=".donemoneaylar">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="65dp"
        android:gravity="center"
        android:text="@string/textview4"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="X. Dönem X. Sınıf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button12"
                android:layout_width="130dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:onClick="planagit1"
                android:text="@string/button12"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button11"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/button11"
                android:layout_width="130dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:onClick="planagit"
                android:text="@string/button11"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button13"
                app:layout_constraintEnd_toStartOf="@+id/button12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button14"
                android:layout_width="130dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:onClick="planagit3"
                android:text="@string/button14"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button13"
                app:layout_constraintTop_toBottomOf="@+id/button12" />

            <Button
                android:id="@+id/button13"
                android:layout_width="130dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:onClick="planagit2"
                android:text="@string/button13"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button15"
                app:layout_constraintEnd_toStartOf="@+id/button14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button11" />

        </LinearLayout>

        <Button
            android:id="@+id/button15"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@color/colorButton"
            android:gravity="center"
            android:onClick="planagit4"
            android:text="@string/button15"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button14" />
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>